updated the import with the new library name and fixed typo for mylibrary

--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,7 @@
 <script src="d3.v5.js"></script>
 <script src="dagre.js"></script>
 -->
-<script src="./compound-graph.min.js"></script>
+<script src="./svg-flowgraph.min.js"></script>
 <title>Demo Graph</title>
 </head>
 <body>
