add callback hooks to node-drag, reorder active element so it is on top

--- a/example/index.html
+++ b/example/index.html
@@ -6,6 +6,11 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.20/lodash.min.js" integrity="sha512-90vH1Z83AJY9DmlWa8WkjkV79yfS2n2Oxhsi2dZbIv0nC4E6m5AbH8Nh156kkM7JePmqD6tcZsfad1ueoaovww==" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/6.3.1/d3.min.js" integrity="sha512-9H86d5lhAwgf2/u29K4N5G6pZThNOojI8kMT4nT4NHvVR02cM85M06KJRQXkI0XgQWBpzQyIyr8LVomyu1AQdw==" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/dagre/0.8.5/dagre.min.js" integrity="sha512-psLUZfcgPmi012lcpVHkWoOqyztollwCGu4w/mXijFMK/YcdUdP06voJNVOJ7f/dUIlO2tGlDLuypRyXX2lcvQ==" crossorigin="anonymous"></script>
+<!--
+<script src="lodash.min.js"></script>
+<script src="d3.min.js"></script>
+<script src="dagre.js"></script>
+-->
 <script src="./svg-flowgraph.min.js"></script>
 <title>Demo Graph</title>
 <style>
@@ -63,8 +68,8 @@ class TestRenderer extends myLibrary.SVGRenderer {
           .attr('y', 0)
           .attr('width', d => d.width)
           .attr('height', d => d.height)
-          .style('fill', '#DDD')
-          .style('stroke', '#CCC');
+          .style('fill', '#EEE')
+          .style('stroke', '#BBB');
       }
     });
     nodeSelection.append('text')
@@ -253,9 +258,23 @@ const renderer = new TestRenderer({
   addons: [ group, nodeSize, highlight, nodeDrag, expandCollapse, panZoom ]
 });
 
+const dragMoveCallback = (node, G) => {
+  const nodeUI = node.select('.node-ui');
+  const rect = nodeUI.select('rect');
+  rect.style('stroke-width', 8);
+  rect.style('stroke-dasharray', '5, 3');
+};
+
+const dragEndCallback = (node, G) => {
+  const nodeUI = node.select('.node-ui');
+  const rect = nodeUI.select('rect');
+  rect.style('stroke-width', 1);
+  rect.style('stroke-dasharray', null);
+};
+
 renderer.setData(graph);
 renderer.render().then(() => {
-  renderer.enableDrag(true);
+  renderer.enableDrag(true, dragMoveCallback, dragEndCallback);
 });
 window.renderer = renderer;
 
