--- a/example/index.html
+++ b/example/index.html
@@ -258,9 +258,46 @@ const renderer = new TestRenderer({
   addons: [ group, nodeSize, highlight, nodeDrag, expandCollapse, panZoom ]
 });
 
+
+const overlap = (node1, node2, threshold) => {
+  const rec1 = node1.getBoundingClientRect();
+  const rec2 = node2.getBoundingClientRect();
+  
+  const xover = Math.max(0,
+    Math.min(rec1.left + rec1.width, rec2.left + rec2.width) - Math.max(rec1.left, rec2.left));
+  
+  const yover = Math.max(0,
+    Math.min(rec1.top + rec1.height, rec2.top + rec2.height) - Math.max(rec1.top, rec2.top));
+  
+  const aover = xover * yover;
+  const a1 = rec1.width * rec1.height;
+  const a2 = rec2.width * rec2.height;
+  return ((aover / a1) >= threshold || (aover / a2) > threshold);
+};
+
+
 const dragMoveCallback = (node, G) => {
   const nodeUI = node.select('.node-ui');
   const rect = nodeUI.select('rect');
+
+  // const others = G.chart.selectAll('.node-ui').filter(d => d.id !== nodeUI.datum().id && nodeUI.datum().nodes);
+  const others = G.chart.selectAll('.node-ui').filter(d => {
+    return !d.nodes || d.nodes.length === 0;
+  }).filter(d => d.id !== nodeUI.datum().id);
+  // console.log(others.size());
+
+  const nodeUIRect = nodeUI.select('rect').node();
+  nodeUI.select('rect').style('fill', '#eee');
+
+  others.each(function(d) {
+    const otherNodeUI = d3.select(this);
+    const otherNodeUIRect = otherNodeUI.select('rect').node();
+    // console.log(overlap(otherNodeUIRect, nodeUIRect, 0.5));
+    if (overlap(otherNodeUIRect, nodeUIRect, 0.5)) {
+      nodeUI.select('rect').style('fill', '#f80');
+    }
+  });
+
   rect.style('stroke-width', 8);
   rect.style('stroke-dasharray', '5, 3');
 };
